--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vue": "^2.6.6",
     "vue-flatpickr-component": "^8.1.1",
     "vue-lazyload": "^1.2.6",
+    "vue-mailchimp-subscribe": "^1.1.0",
     "vue-router": "^3.0.2",
     "vue2-transitions": "^0.2.3"
   },
@@ -23,7 +24,7 @@
     "@vue/cli-plugin-eslint": "^3.4.0",
     "@vue/cli-plugin-pwa": "^3.4.0",
     "@vue/cli-service": "^3.4.0",
-    "node-sass": "^4.11.0",
+    "node-sass": "^4.13.1",
     "sass-loader": "^7.1.0",
     "vue-template-compiler": "^2.6.6"
   }
